# GBaRD

./: .gitignore  CITATION.cff  LICENSE  README.md  setup.cfg
examples/: evaluate_trecdl19doc.py  evaluate_trecdl19passage.py
examples/utils/: __init__.py
experiments/: README.md  benchmark.py  distillation.py  export_params.py  mmsedistill.py  requirements.txt  setup.cfg  trec_eval.py  trec_eval_mmse_distill.py
experiments/common/: __init__.py  trec_eval.py  utils.py
experiments/common/datasets/: trec19document.py  trec19passage.py
experiments/hydra_conf/: distillation.yaml  trec_eval.yaml
experiments/hydra_conf/datamodule/: h5.yaml  trec19doc.yaml  trec19pass.yaml
experiments/hydra_conf/ptlogger/: tensorboard.yaml
experiments/proposition/: __init__.py  _doc_encoder.py  _processor.py  _ranker.py  mmsecolbert.py  mmsedistillation.py
experiments/proposition/graph_construction/: __init__.py  _graph_construction.py  fullyconnected.py  graph_of_word.py
optimized/: __init__.py  _colbert.py  gbard.py
