[metadata]
name = GBaRD
version = 1.0
author = Tim Hagen
description = GBaRD from the thesis "Effective and Efficient Ranking Using a Dual Encoder Approach"
url = https://github.com/TheMrSheldon/GBaRD

[options]
packages = gbard
package_dir =
	gbard = optimized
install_requires =
    transformers==4.25.1
	torch-geometric==2.2.0

[flake8]
max-line-length = 120
extend-ignore = E203

[isort]
profile=black